--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <title>Calculadora</title>
 </head>
 <body>
-    <div class="fundo">
+    <div class="container">
         <div class="calculadora">
             <div>
                 <i class="fa fa-calculator"></i>
